test/files/neg/gadts1.check
gadts1.scala:15 error: type mismatch;
 found   : Test.this.NumTerm
 required: Test.this.Term[a]
    case NumTerm(n) => c.x = Double(1.0) 
                ^
gadts1.scala:15 error: type mismatch;
 found   : Test.this.Double
 required: a
    case NumTerm(n) => c.x = Double(1.0) 
                                   ^
two errors found
